--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,13 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>Build_Your_Resume</members>
+        <name>CustomApplication</name>
+    </types>
+    <types>
+        <members>CreateEditResumeOverrideAura</members>
+        <name>AuraDefinitionBundle</name>
+    </types>
+    <types>
+        <members>BYROS_ResumeCertificationService</members>
+        <members>BYROS_ResumeDeepClone</members>
+        <members>BYROS_ResumeEducationService</members>
+        <members>BYROS_ResumeExperienceService</members>
+        <members>BYROS_ResumePDFController</members>
+        <members>BYROS_ResumePDFControllerTest</members>
+        <members>BYROS_ResumeService</members>
+        <members>BYROS_ResumeServiceTest</members>
+        <members>BYROS_ResumeSkillService</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>Create_Resume</members>
+        <members>Manage_Resumes</members>
+        <members>Resume_Experience_Record_Page</members>
+        <members>Resume_Record_Page</members>
+        <members>View_Resume</members>
+        <name>FlexiPage</name>
+    </types>
+    <types>
+        <members>basicinfostep</members>
+        <members>certsstep</members>
+        <members>createresume</members>
+        <members>displayresume</members>
+        <members>educationstep</members>
+        <members>resumestepbasicinfo</members>
+        <members>reviewandfinishstep</members>
+        <members>selectresume</members>
+        <members>skillsstep</members>
+        <members>viewresume</members>
+        <members>workexperiencestep</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>BYROS_ResumeAsPDF</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>Certification__c</members>
+        <members>Education__c</members>
+        <members>Profile__c</members>
+        <members>Resume__c</members>
+        <members>Resume_Certification__c</members>
+        <members>Resume_Education__c</members>
+        <members>Resume_Experience__c</members>
+        <members>Resume_Skill__c</members>
+        <members>Skill__c</members>
+        <members>Work_Experience__c</members>
+        <name>CustomObject</name>
+    </types>    
+    <types>
+        <members>Create_Resume</members>
+        <members>Manage_Resumes</members>
+        <members>View_Resume</members>
+        <members>Profile__c</members>
+        <members>Resume__c</members>
+        <members>Certification__c</members>
+        <members>Education__c</members>
+        <members>Skill__c</members>
+        <members>Work_Experience__c</members>
+        <name>CustomTab</name>        
+    </types>
+    <types>
+        <members>BYROS_ResumeExperience_CopyResponsibilities</members>
+        <members>BYROS_Resume_DeepClone_Flow</members>
+        <name>Flow</name>
+    </types>
+    <types>
         <members>Resume__c-Resume Layout</members>
+        <members>Profile__c-Profile Layout</members>
         <name>Layout</name>
     </types>    
     <types>
         <members>Resume__c.Clone_Resume</members>
         <members>Resume__c.View_Resume_As_PDF</members>
         <name>WebLink</name>
+    </types>
+    <types>
+        <members>Admin</members>
+        <name>Profile</name>
     </types>
     <version>64.0</version>
 </Package>
